--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "express-ejs-layouts": "^2.2.0",
+    "mongoose": "^3.6.0",
     "underscore": "^1.8.3"
   },
   "devDependencies": {},
